k8s/deployment.yaml
apiVersion: apps/v1
#Desource type and its name and name space
kind: Deployment               
metadata:
  name: library-app-deployment         
  namespace: team6
spec:   
#Desired replicas for the application         
  replicas: 2      
  selector:
    matchLabels:
      app: library-app
  template:
    metadata:
      labels:
        app:  library-app
    spec:
    # Container image name that it pulled
      containers:           
        - name: library-app
          image: mayaremam/library_app:latest  
          imagePullPolicy: Always 
          #Listen port 
          ports:
            - containerPort: 5000                
          volumeMounts:
            - name: library-db-storage
              mountPath: /app/instance
      #The volume inside the container         
      volumes:                            
        - name: library-db-storage
          persistentVolumeClaim:
            claimName: library-app-pvc
