k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-app-grafana-service
  namespace: team6
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: library-app-grafana
