k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-app-service
  namespace: team6
spec:
  type: LoadBalancer
  selector:
    app: library-app
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 5000
