k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
#Type of resource
kind: Ingress  
#Meta contain that data about the ingress
metadata:
  name: flask-library-ingress
  namespace: team6
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
#Describes the desired state of the Ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: library-app-service
            port:
              number: 80
